<resources>
    <string name="app_name">Fishpowered</string>
    <string name="title_back">Back</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="default_option">Default</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="default_address_bar_text">Search or enter address…</string>
    <string name="title_refresh">Refresh</string>
    <string name="title_activity_browser">Browser</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_speed_dial">SpeedDial</string>
    <string name="title_activity_edit_fave">Edit</string>
    <string name="title_activity_add_fave">Add favourite</string>
    <string name="error_saving_please_try_again">Error saving. Please check the values and try again.</string>
    <string name="saved">Saved</string>
    <string name="item_title_field">Title (optional)</string>
    <string name="item_address_field">Address</string>
    <string name="item_address_hint">e.g. example.com</string>
    <string name="item_address_required">Please enter an address to the website</string>
    <string name="item_address_error">Please check this is a valid address</string>
    <string name="item_limit_daily_usage">Limit daily usage (optional)</string>
    <string name="item_daily_usage_hint">minutes</string>
    <string name="item_daily_usage_error">Please enter a daily usage limit in minutes e.g. 30</string>
    <string name="add">add</string>
    <string name="faves">Faves</string>
    <string name="history">History</string>
    <string name="title_activity_browser2">Browser2</string>
    <string name="closed_xxxx">Closed %s</string>
    <string name="undo">Undo</string>
    <string name="copied_xxxx">Copied "%s"</string>
    <string name="trusted_switch_label">Trusted (shows media if safe mode on)</string>
    <string name="fave_switch_label">Favourite</string>
    <string name="deleted">Deleted</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="yes_answer">Yes</string>
    <string name="no_answer">No</string>
    <string name="view">view:</string>
    <string name="fave_pages_tag">Faves</string>
    <string name="hot_pages_tag">Hot</string>
    <string name="fave_quotes_title">Quotes</string>
    <string name="fave_videos_title">Videos</string>
    <string name="fave_images_title">Images</string>
    <string name="clear">Clear</string>
    <string name="most_popular">Most popular</string>
    <string name="dialog_continue">Continue</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="most_visited_last_48h">What\'s hot</string>
    <string name="most_time_spent_last_48h">What\'s hot</string>
    <string name="delete_all">Delete all</string>
    <string name="quickly_add_favourites_tip">Quickly add favourites by typing the address below and pressing \'Add\' or using the ❤ button when viewing a page, image or text.</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_header_appearance">Appearance</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="default_dictionary">Dictionary</string>
    <string-array name="gesture_swipe_to_change_tab_entries">
        <item>Full screen (default)</item>
        <item>Bottom half of screen</item>
        <item>Bottom quarter of screen</item>
        <item>Navigation bar only</item>
    </string-array>
    <string-array name="gesture_swipe_up_nav_bar_titles">
        <item>Close tab</item>
        <item>Show speed dial</item>
        <item>Refresh</item>
        <item>Disabled</item>
    </string-array>
    <string-array name="gesture_swipe_from_edge_titles">
        <item>Switch tabs</item>
        <item>Navigate back</item>
        <item>Navigate forward</item>
        <item>Disabled</item>
    </string-array>
    <string-array name="gesture_swipe_down_when_at_top_titles">
        <item>Easy reach mode (default)</item>
        <item>Refresh</item>
        <item>Show speed dial</item>
        <item>View Faves list</item>
        <item>View What\'s hot list</item>
        <item>View Saved for later list</item>
        <item>View History list</item>
        <item>View open tabs</item>
        <item>Disabled</item>
    </string-array>
    <string name="default_text_search_engine">Text search engine</string>
    <string name="default_image_search_engine">Image search engine</string>
    <string name="default_translation_engine">Translations</string>
    <string-array name="default_translation_engine_list_titles">
        <item>Google Translate</item>
    </string-array>
    <string-array name="default_translation_engine_list_values">
        <item>google</item>
    </string-array>
    <string-array name="default_text_search_engine_list_titles">
        <item>Ask</item>
        <item>Baidu</item>
        <item>Bing</item>
        <item>Duck duck go</item>
        <item>Ecosia (plants trees for searches)</item>
        <item>Google</item>
        <item>Wolfram Alpha</item>
        <item>Yandex</item>
    </string-array>
    <string-array name="trending_search_location_titles">
        <item>Automatic</item>
        <item>Global</item>
        <item>Canada</item>
        <item>Germany</item>
        <item>Italy</item>
        <item>Japan</item>
        <item>Russia</item>
        <item>Spain</item>
        <item>United Kingdom</item>
        <item>United States</item>
        <item>Disabled</item>
    </string-array>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string-array name="nav_button_option_titles">
        <item>Search or enter/edit address</item>
        <item>Voice search</item>
        <item>Navigate back</item>
        <item>Navigate forward</item>
        <item>Refresh/stop</item>
        <item>Copy page URL</item>
        <item>Visit copied URL</item>
        <item>Share page URL</item>
        <item>Open new tab</item>
        <item>View open tabs</item>
        <item>View closed tabs</item>
        <item>Close all tabs</item>
        <item>Toggle privacy/incognito mode</item>
        <item>Open page menu</item>
        <item>Show speed dial</item>
        <item>View Faves list</item>
        <item>View What\'s hot list</item>
        <item>View Saved for later list</item>
        <item>View History list</item>
        <item>Go to search engine home page</item>
        <item>Go to custom home page/address</item>
        <item>Pin tab to floating window</item>
        <item>Move page down for easy reach</item>
        <item>Open settings</item>
        <item>Cats</item>
        <item>No action/hidden</item>
    </string-array>
    <string-array name="multi_select_list_preference_default_value" />
    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="pref_header_theme">Theme</string>
    <string name="pref_content_category_title">Content</string>
    <string name="pref_header_customise_nav_bar">Customise buttons</string>
    <string name="pref_header_history">History</string>
    <string name="pref_coming_soon">Coming soon</string>
    <string name="hide_cookie_warnings">Block privacy/cookie warnings</string>
    <string name="dont_load_images">Block images/videos</string>
    <string name="hide_cookie_warnings_description">This won\'t block websites using cookies but will try and hide the warnings for them</string>
    <string name="dont_load_images_description">Useful for saving data usage abroad</string>
    <string name="pref_header_searching">Searching</string>
    <string name="coming_soon">Coming soon</string>
    <string name="background_gradient_begin">Background gradient begin</string>
    <string name="background_gradient_end">Background gradient end</string>
    <string name="hex_colour_value">Hex colour value</string>
    <string name="title_activity_browser_settings">Settings</string>
    <string name="quick_press_address_hint">Quick press address hint</string>
    <string name="long_press_address_hint">Long press address hint</string>
    <string name="open_keyboard_with_speed_dial">Open keyboard when viewing speed dial</string>
    <string name="fave_added">Fave added</string>
    <string name="send_crash_reports">Automatically send crash reports</string>
    <string name="send_crash_reports_summary">Anonymous crash reporting by Crashlytics</string>
    <string name="downloading">Downloading…</string>
    <string name="msg_file_downloaded">Downloaded</string>
    <string name="failed_to_upload_file">Failed to upload file</string>
    <string name="failed_to_download_file">Failed to download file</string>
    <string name="tabs">Tabs</string>
    <string name="search_suggestions">Suggestions</string>
    <string name="fave_pages_title">Pages</string>
    <string name="open_tabs">Open tabs (%s)</string>
    <string name="block_ads">Block ads+trackers</string>
    <string name="browser_settings">Browser settings</string>
    <string name="site_preferences_dialog_title">%s settings:</string>
    <string name="block_site_seeing_your_location">Block site using GPS</string>
    <string name="problem_with_a_web_page_try_disabling_hint">Problem with a web page?</string>
    <string name="try_disabling_blockers">Try disabling ad and cookie warning blockers for the site…</string>
    <string name="still_having_problems">Still having problems?</string>
    <string name="click_the_button_to_send_us_an_email">Please click the button to send us an email and let us know
        what happened. We\'re sorry for any inconvenience!</string>
    <string name="is_google_chrome_and_fishpowered_up_to_date">Are Chrome and Fishpowered apps up to date?</string>
    <string name="google_chrome_needs_to_be_kept_up_to_date_because">Google Chrome needs to be kept up-to-date because
        Fishpowered is built on top of it\'s browser engine. Please check both apps are up to date in Google Play Store.</string>
    <string name="default_text_size">Default text size (percent)</string>
    <string name="web_page">Web page</string>
    <string name="image">Image/gif</string>
    <string name="video">Video</string>
    <string name="quote">Quote</string>
    <string name="type">Type</string>
    <string name="desktop_mode">Desktop mode</string>
    <string name="minimum_text_size">Minimum text size</string>
    <string name="custom_css_rules">Hide cookie warnings, ads, distractions etc. Click Add to get started</string>
    <string name="custom_js_rules">Custom JS</string>
    <string name="images">Images</string>
    <string name="text_settings_title">Text</string>
    <string name="download_images">Download images</string>
    <string name="add_css_rule">^ Add rule to hide ads, popups, distractions etc</string>
    <string name="custom_styles">Custom styles:</string>
</resources>