<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="fishpowered.best.browser.EditItem">
    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/ScrollView01"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:scrollbars="vertical">
        <LinearLayout
            android:layout_width="fill_parent"
            android:orientation="vertical"
            android:layout_height="fill_parent"
            android:layout_marginHorizontal="30dp">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp"
                android:text="@string/item_address_field"
                android:textColor="#333333"
                app:layout_constraintStart_toStartOf="parent" />
            <EditText
                android:id="@+id/item_address_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:textColor="#111111"
                android:hint="@string/item_address_hint"
                />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textColor="#333333"
                android:text="@string/item_title_field" />
            <EditText
                android:id="@+id/item_title_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:textColor="#111111"
                android:hint=""
                app:layout_constraintStart_toStartOf="parent"
                />

            <!-- Tag fave dialog -->
            <FrameLayout android:visibility="visible"
                android:layout_marginTop="30dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tag_fave_popup_mount_point"
                />

            <RadioGroup
                android:id="@+id/itemTypeRadioGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:layout_editor_absoluteX="115dp"
                tools:layout_editor_absoluteY="350dp">
                <TextView
                    android:id="@+id/itemTypeRadioGroupTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/type" />
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/typeWebPage"
                    android:text="@string/web_page" />
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/typeImage"
                    android:text="@string/image" />
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/typeVideo"
                    android:text="@string/video" />
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/typeQuote"
                    android:text="@string/quote" />
            </RadioGroup>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/item_limit_daily_usage"
                android:textColor="#333333"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="parent" />
            <EditText
                android:id="@+id/item_daily_usage_limit_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:textColor="#111111"
                android:inputType="number"
                android:visibility="gone"
                android:hint="@string/item_daily_usage_hint"
                />

            <Switch
                android:id="@+id/isFaveSwitch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:checked="true"
                android:text="@string/fave_switch_label"
                android:textColor="#333333" />

            <Switch
                android:id="@+id/isTrustedSwitch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:checked="true"
                android:text="@string/trusted_switch_label"
                android:textColor="#333333" />

        </LinearLayout>
    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/save_fave_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:src="@drawable/ic_check_white_action_32dp"
        android:layout_margin="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toLeftOf="@id/cancel_fave_button"
        />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/cancel_fave_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:clickable="true"
        android:src="@drawable/ic_nav_bar_stop_24dp"
        app:backgroundTint="#FF888888"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>