<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/page_prefs_layout"
    app:layout_constrainedHeight="true"
    app:layout_constrainedWidth="true"
    >
    <ScrollView
        android:background="@drawable/site_preferences_background"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="100dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintHeight_max="400dp"
        app:layout_constrainedHeight="true"
        app:layout_constrainedWidth="true"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="top"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            app:layout_constrainedHeight="true"
            >
            <TextView
                android:id="@+id/site_prefs_title"
                android:drawableStart="@drawable/ic_context_menu_settings_24dp"
                android:drawablePadding="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/site_preferences_dialog_title"
                android:textColor="?contextMenuIconColour"
                android:layout_marginTop="15dp"
                android:textStyle="bold"/>

            <Switch
                android:id="@+id/site_prefs_switch_desktop_mode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/desktop_mode"
                android:textColor="?contextMenuIconColour"
                android:layout_marginTop="15dp"
                />

            <Switch
                android:id="@+id/site_prefs_switch_block_ads"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/block_ads"
                android:textColor="?contextMenuIconColour"
                android:layout_marginTop="15dp"
                />

            <Switch
                android:id="@+id/site_prefs_switch_block_gdpr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hide_cookie_warnings"
                android:textColor="?contextMenuIconColour"
                android:layout_marginTop="15dp"
                />
            <!--<Switch
                android:id="@+id/site_prefs_switch_block_tracking_cookies"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/block_tracking_cookies"
                android:textColor="?contextMenuIconColour"
                android:layout_marginTop="15dp"
                />-->
            <Switch
                android:id="@+id/site_prefs_switch_block_gps"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/block_site_seeing_your_location"
                android:textColor="?contextMenuIconColour"
                android:layout_marginTop="15dp"
                />

            <TextView
                android:id="@+id/show_advanced_site_settings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/speed_dial_show_more_ellipsis"
                android:textAlignment="textEnd"
                android:textColor="?colorAccent"
                />

            <LinearLayout
                android:id="@+id/advanced_site_settings_wrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/custom_styles"
                    android:textColor="?contextMenuIconColour"
                    android:layout_marginTop="12dp"
                    app:layout_constraintTop_toBottomOf="@id/enable_element_inspection_icon"
                    app:layout_constraintEnd_toEndOf="parent"
                    />
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    >
                    <EditText
                        android:id="@+id/custom_css_inp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textMultiLine"
                        android:typeface="monospace"
                        android:hint="@string/custom_css_rules"
                        android:textColor="#000000"
                        android:textColorHint="#888888"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/enable_element_inspection_btn"
                        android:layout_marginEnd="30dp"
                        android:layout_marginBottom="10dp"
                        android:textSize="13sp"
                        android:background="@drawable/dialog_edittext_bg"
                        android:padding="7dp"
                        />
                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/enable_element_inspection_btn"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="@id/custom_css_inp"
                        android:layout_marginStart="5dp"
                        >
                        <ImageView
                            android:text="@string/add_css_rule"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_context_menu_erase"
                            android:id="@+id/enable_element_inspection_icon"
                            android:layout_marginTop="10dp"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            />
                        <TextView
                            android:id="@+id/enable_element_inspection_btn_label"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/add"
                            android:textSize="11sp"
                            android:textAllCaps="true"
                            android:textColor="?contextMenuIconColour"
                            android:layout_marginTop="3dp"
                            app:layout_constraintTop_toBottomOf="@id/enable_element_inspection_icon"
                            app:layout_constraintEnd_toEndOf="parent"
                            />
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </androidx.constraintlayout.widget.ConstraintLayout>
                <EditText
                    android:id="@+id/custom_js_inp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:hint="@string/custom_js_rules"
                    android:textColor="#000000"
                    android:typeface="monospace"
                    android:textColorHint="#888888"
                    app:layout_constraintTop_toBottomOf="@id/custom_css_inp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:background="@drawable/dialog_edittext_bg"
                    android:padding="7dp"
                    android:textSize="13sp"
                    />
            </LinearLayout>
            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/browser_settings"
                android:background="?navBarGradientBeginColour"
                android:drawableEnd="@drawable/ic_open_in_new_tab_mini"
                android:drawablePadding="2dp"
                android:textColor="?mainNavBarIconColour"
                android:layout_marginTop="15dp"
                android:padding="5dp"
                android:minHeight="0dp"
                android:minWidth="0dp"
                android:onClick="onOpenBrowserSettingsBtnClick"
                />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>